--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<a href = "https://www.youtube.com/watch?v=A66TYFdz8YA" target="blank">Home</a>
+		<a href = "https://www.youtube.com/watch?v=A66TYFdz8YA">About us</a>
+		<a href = "https://www.youtube.com/watch?v=A66TYFdz8YA">Contact us</a>
+	</nav>
+	<h1>3 random videos</h1>
+	<ol>
+		<li><video controls><source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video</li>
+		<li><video controls><source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></video</li>
+		<li><video controls><source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"></video</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
