--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
 	</nav>
 	<h1>3 random videos</h1>
 	<ol>
-		<li><video controls><source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video</li>
-		<li><video controls><source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></video</li>
-		<li><video controls><source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"></video</li>
+		<li><video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video</li>
+		<li><video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></video</li>
+		<li><video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"></video</li>
 	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
