--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-		<a href = "https://www.youtube.com/watch?v=A66TYFdz8YA" target="blank">Home</a>
-		<a href = "https://www.youtube.com/watch?v=A66TYFdz8YA">About us</a>
-		<a href = "https://www.youtube.com/watch?v=A66TYFdz8YA">Contact us</a>
-	</nav>
+		<ul><li><a href = "https://www.youtube.com/watch?v=A66TYFdz8YA" target="blank">Home</a>
+		</li><li><a href = "https://www.youtube.com/watch?v=A66TYFdz8YA">About us</a>
+		</li><li><a href = "https://www.youtube.com/watch?v=A66TYFdz8YA">Contact us</a>
+		</li></ul></nav>
 	<h1>3 random videos</h1>
 	<ol>
 		<li><video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video</li>
